<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.DetailUserActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextContent.Title"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextContent.Subtitle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        tools:text="@string/name" />

    <Button
        android:id="@+id/btn_share"
        style="@style/ButtonGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_outline_share"
        android:text="@string/share_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        android:text="@string/follow_info"
        app:drawableStartCompat="@drawable/ic_outline_followers"
        app:drawableTint="@color/teal_dark_primary"
        app:layout_constraintEnd_toEndOf="@+id/btn_share"
        app:layout_constraintStart_toStartOf="@+id/btn_share"
        app:layout_constraintTop_toBottomOf="@+id/btn_share"
        tools:text="@string/follow" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        app:drawableStartCompat="@drawable/ic_outline_company"
        app:drawableTint="@color/teal_dark_primary"
        app:layout_constraintEnd_toEndOf="@+id/tv_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        android:text="@string/repositories"
        app:drawableStartCompat="@drawable/ic_outline_repository"
        app:drawableTint="@color/teal_dark_primary"
        app:layout_constraintEnd_toEndOf="@+id/tv_company"
        app:layout_constraintStart_toStartOf="@+id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        tools:text="@string/repository" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        app:drawableStartCompat="@drawable/ic_outline_location"
        app:drawableTint="@color/teal_dark_primary"
        app:layout_constraintEnd_toEndOf="@+id/tv_repository"
        app:layout_constraintStart_toStartOf="@+id/tv_repository"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository"
        tools:text="@string/location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/follow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:tabIndicatorColor="@color/teal_light_primary"
        app:tabIndicatorGravity="bottom"
        app:tabTextColor="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>